Almost finished phase 2

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+
+    <% if logged_in? %>
+      <%= current_user.username %>
+      <%= button_to "Sign Out", session_url, method: :delete %>
+    <% end %>
+    
     <%= yield %>
   </body>
 </html>
